# space-telemetry-sim

./: .gitignore  CMakeLists.txt  README.md
docs/: design.md  learn.md
include/: buffer.h  compression.h  logger.h  telemetry.h
logs/: telemetry_1765394089.csv
src/: buffer.cpp  compression.cpp  ground_station.cpp  main.cpp  sensors.cpp  test_main.cpp  transmitter.cpp
